--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalho html</title>
     <link rel="stylesheet" href="style.css">
+    <!--Fonte-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&family=Playwrite+CU:wght@100..400&display=swap" rel="stylesheet">
 </head>
     
 <body>
     <div></div>
     <h1>Minha página html (h1)</h1>
-    <div><p>Minha página html apresentada com os <em>principais elementos.</em> (p)</p><div>
+    <div class="div-01"><p>Minha página html</div> apresentada com os <em>principais elementos.</em> (p)</p>
     <p><strong>Realizada na universidade IBMEC-RJ</strong> pelo professor Eduardo Mangeli em <span>desenvolvimento web. (p)<span></p>
     <h2>Escrita em h2</h2>
     <h3>Escrita em h3</h3>
