--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 </head>
     
 <body>
-    <div></div>
+    <div class="div-02"></div>
     <h1>Minha página html (h1)</h1>
     <div class="div-01"><p>Minha página html</div> apresentada com os <em>principais elementos.</em> (p)</p>
     <p><strong>Realizada na universidade IBMEC-RJ</strong> pelo professor Eduardo Mangeli em <span>desenvolvimento web. (p)<span></p>
     <h2>Escrita em h2</h2>
+    <div class="div-tamanho-fixo">Tamanho fixo</div>
     <h3>Escrita em h3</h3>
     <h4>Escrita em h4</h4>
+    <div class="div-tamanho-relativo">div com seu tamanho relativo</div>
     <H5>Escrita em h5</H5>
     <h6>Escrita em h6</h6>
     <ul>
